# Fin

./: .gitignore  CMakeLists.txt  build.bat  build.sh  conanfile.py
pyprototype/: fin_test_parse.py  pyproject.toml
pyprototype/src/: _legacy_compiler.py  main.py
pyprototype/src/ast2/: __init__.py  nodes.py
pyprototype/src/codegen/: arrays.py  base.py  enums.py  essentials.py  fin.py  flow.py  functions.py  helpers.py  interfaces.py  macros.py  modules.py  structs.py  types.py  utils.py  variables.py
pyprototype/src/codegen/compiletime/: errors.py
pyprototype/src/codegen/prod/: access.py  arrays.py  essentials.py  flow.py  funcs.py  literals.py  macros.py  memory.py  metaprogramming.py  ops.py  vars.py
pyprototype/src/lexer/: __init__.py  lexer.py
pyprototype/src/parser/: controlflow.py  datastruct.py  expressions.py  functions.py  import_ext.py  include.py  macros.py  parser.py  pexpressions.py  program.py  utilities.py  variables.py
pyprototype/src/preprocessor/: macros.py
pyprototype/src/semantics/: checker.py  scope.py  types.py
pyprototype/src/utils/: hashing.py  helpers.py  module_loader.py
pyprototype/stdlib/: builtins.fin
src/: main.cpp
src/ast/: ASTNode.cpp  ASTNode.hpp  ASTPrinter.cpp  ASTPrinter.hpp  CloneVisitor.cpp  CloneVisitor.hpp  Visitor.hpp
src/diagnostics/: DiagnosticEngine.cpp  DiagnosticEngine.hpp
src/driver/: CompilerOptions.hpp  Driver.cpp  Driver.hpp
src/lexer/: lexer.hpp  lexer.l  tokens.hpp
src/macros/: MacroExpander.cpp  MacroExpander.hpp  SubstitutionVisitor.cpp  SubstitutionVisitor.hpp
src/parser/: parser.y
src/preprocessor/: Preprocessor.cpp  Preprocessor.hpp
src/semantics/: Scope.hpp  SemanticAnalyzer.hpp  Type.hpp
src/semantics/impl/: Analyzer_Core.cpp  Analyzer_Decl.cpp  Analyzer_Expr.cpp  Analyzer_Stmt.cpp
src/types/: Type.cpp  Type.hpp  TypeImpl.hpp
src/utils/: Levenshtein.hpp  ModuleLoader.cpp  ModuleLoader.hpp
tests/: CMakeLists.txt  bigtest.popo  game.popo  test.popo  test2.popo  test3.popo  test4.popo  test_for.popo  test_generic.popo  test_import.popo  test_import_c.popo  test_macros.popo  test_parser.cpp  test_pointer.popo  test_sizeof.popo
tests/addits/: plor.fin
tests/samples/: arrays_enums.fin  basic.fin  complex.fin  deeptest1.fin  deeptest2.fin  deeptest3.fin  deeptest4.fin  functions.fin  generics_interfaces.fin  importing.fin  interfaces.fin  lambdas.fin  letssee.fin  macros.fin  macros2.fin  operators.fin  preprocessor.fin  simple_pointers.fin  struct_methods.fin  structs.fin  undefined_behavior.fin
tests/samples/stdlib/: base_array.fin  collection.fin  error.fin  hashmap.fin  networking.fin  stdio.fin
tests_fin/fintests/: basic_test.fin.notsupported  bigtest.fin  import_test.fin  small_test.fin  test2.fin  test3.fin  test4.fin  test_any.fin  test_enum.fin  test_generic.fin  test_heap.fin  test_import.fin  test_lambda.fin  test_linked_list.fin  test_logical_ops.fin  test_macros.fin  test_panic.fin  test_struct.fin  test_tmacros.fin  test_turbofish.fin  test_type_anno.fin  test_type_conv.fin  test_varargs.fin  test_while.fin
tests_fin/fintests/testing_deep1/: array.fin  good_test.fin  interfaces.fin  main.fin  stress_test.fin  test_fin_oop.fin  test_operator.fin
tests_fin/fintests/testing_deep2/: test_special.fin
